--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -340,4 +340,24 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/main_LLC_score"
+        android:layout_width="70dp"
+        android:layout_height="@dimen/heart_dimens"
+        android:layout_marginEnd="@dimen/margin_default"
+        android:layout_marginTop="@dimen/margin_default"
+        android:layout_alignParentEnd="true"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/main_LBL_score"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="32sp"
+            android:textAlignment="center"
+            android:textColor="@color/green"
+            />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 </RelativeLayout>
