--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="dev.tw1t1.a25b_10357_a2.MainActivity">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/main_IMG_background"
